fix footer: gap text

--- a/landing/components/Footer/Footer.module.scss
+++ b/landing/components/Footer/Footer.module.scss
@@ -33,6 +33,8 @@
   color: rgb(216, 216, 216);
   font-family: "sofia-pro-SemiBold";
   font-size: 1vw;
+  text-align: center;
+  line-height: 0.6;
 }
 
 @media (max-width: 576px) {
