--- a/landing/components/Presentation/Presentation.module.scss
+++ b/landing/components/Presentation/Presentation.module.scss
@@ -597,7 +597,7 @@
         justify-content: center;
         align-items: center;
         margin-right: 0;
-        margin-bottom: 4%;
+        margin-bottom: 10%;
 
         img {
           width: 85%;
